# event_explorer

./: .gitignore  README.md  pyproject.toml
explorer/: __init__.py  event_explorer.py  utils.py
notebooks/: demo.ipynb  explore.ipynb  food.ipynb  movies.ipynb  plotting.ipynb  recurse_demo_2023_03_03.ipynb  testing.ipynb
tests/: fixtures.py  test_data.csv  test_event_explorer.py
